# reflect-pdf

./: .gitignore  CHANGELOG.md  Makefile  README.md  cliff.toml  project.yml
.cursor/rules/: project-overview.mdc  rust-ddd.mdc  swift-conventions.mdc  uniffi-bridge.mdc
.github/workflows/: ci.yml  release.yml
LumenPDF/: Info.plist  project.yml
LumenPDF/App/: AppState.swift  LumenPDFApp.swift
LumenPDF/LumenPDF.xcodeproj/: project.pbxproj
LumenPDF/Services/: BridgeService.swift  KeychainService.swift  ReadingSessionService.swift  TranslationErrorFormatter.swift
LumenPDF/Views/: ContentView.swift  ContextSentenceFormatting.swift  (+4 more)
ReflectPDF/: Info.plist  project.yml
docs/: instruction.md
lumen-pdf-core/: Cargo.toml
reflect-pdf-core/: Cargo.toml
reflect-pdf-core/src/: error.rs  lib.rs
reflect-pdf-core/src/application/: mod.rs
reflect-pdf-core/src/application/pdf_document/: use_case.rs
reflect-pdf-core/src/application/translation/: use_case.rs
reflect-pdf-core/src/application/vocabulary/: use_case.rs
reflect-pdf-core/src/domain/pdf_document/: entity.rs  repository.rs
reflect-pdf-core/src/domain/translation/: entity.rs  repository.rs  service.rs
reflect-pdf-core/src/domain/vocabulary/: entity.rs  repository.rs
reflect-pdf-core/src/infrastructure/db/: migration.rs  pdf_document_repo.rs  translation_cache_repo.rs  vocabulary_repo.rs
reflect-pdf-core/src/infrastructure/translator/: fallback_translator.rs  llm_translator.rs  mod.rs
reflect-pdf-core/src/interfaces/: api.rs
scripts/: ExportOptions.plist  build-rust.sh  package-dmg.sh
(+54 files in other folders)
